--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
-    "deploy": "bash deploy.sh"
-
+    "deploy": "bash deploy.sh",
+    "deploy:win": "deploy.bat"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "vuepress": "^1.9.9"
+  }
 }
